--- a/src/styles/markerLabel.css
+++ b/src/styles/markerLabel.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .marker {
@@ -9,9 +10,41 @@
   height: 40px;
 }
 
+.marker-focus {
+  width: 44px;
+  height: 60px;
+}
+
+.umbrella-count {
+  position: absolute;
+  z-index: 10;
+  top: 10%;
+  left: 40%;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+}
+
+.umbrella-count-focus {
+  position: absolute;
+  z-index: 10;
+  top: 10%;
+  left: 40%;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+
 .custom-label {
   padding-top: 4px;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
+  text-align: center;
+}
+
+.custom-label-focus {
+  padding-top: 4px;
+  font-size: 16px;
+  font-weight: 700;
   text-align: center;
 }
