--- a/src/styles/markerLabel.css
+++ b/src/styles/markerLabel.css
@@ -51,6 +51,7 @@
   font-size: 14px;
   font-weight: 600;
   text-align: center;
+  width: 150px;
 }
 
 .custom-label-focus {
@@ -58,4 +59,5 @@
   font-size: 16px;
   font-weight: 700;
   text-align: center;
+  width: 150px;
 }
